# waygate-client

./: Cargo.toml  waygate.toml
.github/workflows/: rust.yml
monitor-ipc/: Cargo.toml
monitor-ipc/src/: lib.rs
src/: config.rs  eac.rs  lib.rs  monitor.rs  p2p.rs  singleton.rs  sodium.rs  steam.rs  system.rs  task.rs  winhttp.rs
src/eac/: eos.rs  hook.rs  peer.rs
src/p2p/: connection.rs  encryption.rs  fsdp.rs  latency.rs  message.rs  packet.rs  queue.rs  session.rs
