[package]
name = "waygate-client"
edition = "2021"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
toml = "0.7.2"
thiserror = "1"
steamworks = "0.10"
steamworks-sys = "0.10"
byteorder = "1"
crossbeam = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-panic = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
simplelog = "0.12"
log-panics = { version = "2", features = ["with-backtrace"] }
base64 = "0.22"
pelite = "0.10"
bincode = "1"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.retour]
version = "0.3"
features = [
    "static-detour",
]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_System_LibraryLoader",
]

[patch.crates-io]
libudis86-sys = { git = 'https://github.com/vars1ty/libudis86-sys.git' }

[features]
default = ["eldenring", "p2p"]
eldenring = []
armoredcore6 = []
p2p = []
